Fixed wrapping issue

--- a/core/static/core/css/announcement-detail.css
+++ b/core/static/core/css/announcement-detail.css
@@ -44,7 +44,7 @@
     margin: 0;
     margin-top: 8px;
     font-size: 3rem;
-    word-break: break-word;
+    overflow-wrap: anywhere;
 }
 .card-authors {
     font-size: 1.2rem;
@@ -83,7 +83,7 @@ hr {
     line-height: 1.6rem;
 }
 .card-body > * {
-    word-break: break-word;
+    overflow-wrap: anywhere;
 }
 .card-body > *:first-child {
     margin-top: 0;
