--- a/core/static/core/css/announcement-list.css
+++ b/core/static/core/css/announcement-list.css
@@ -103,7 +103,7 @@
     margin: 0;
     margin-top: 8px;
     font-size: 2rem;
-    word-break: break-word;
+    overflow-wrap: anywhere;
 }
 .card-headers {
     display: -webkit-box;
@@ -158,7 +158,7 @@
     font-size: 1rem;
     line-height: 1.6rem;
     margin-top: 0;
-    word-break: break-word;
+    overflow-wrap: anywhere;
 }
 .expandable {
     display: -webkit-box;
