--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -1,7 +1,7 @@
 .title {
     margin: 0;
     margin-bottom: 10px;
-    word-break: break-word;
+    overflow-wrap: anywhere;
 }
 .blog{
     display: -webkit-box;
@@ -54,7 +54,7 @@
     font-size: 1rem;
     line-height: 1.6rem;
     margin-top: 0;
-    word-break: break-word;
+    overflow-wrap: anywhere;
 }
 
 
@@ -148,7 +148,7 @@
     font-size: 1rem;
     line-height: 1.6rem;
     margin-top: 0;
-    word-break: break-word;
+    overflow-wrap: anywhere;
 }
 hr {
     margin: 10px 0;
